# pytest-locker

./: .flake8  .gitignore  404.html  CNAME  LICENSE  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml  tasks.py
.github/workflows/: cd.yml  ci.yml  codecov.yml
.pytest_locker/: test.test_locker.test_json_locker_default.1.json  test.test_locker.test_json_locker_pydantic.1.json  test.test_locker.test_locker.1.json  test.test_locker.test_locker.1.txt  test.test_locker.test_locker_with_name.this is my name.json  test.test_locker.test_locker_with_name.this is my name.txt  test.test_locker.test_locker_with_wrong_data.1.txt  test.test_locker.test_multiline_diff.rhyme.txt  test.test_locker.test_multiline_diff.rhyme_diff.json  test.test_locker.test_multiline_diff.rhyme_diff.txt
docs/: index.md
search/: search_index.json
src/pytest_locker/: __init__.py  encoder.py  fixtures.py
src/test_locker/: __init__.py  fixtures.py
stylesheets/: extra-style.css
test/: conftest.py  test_locker.py
